src/style/App.scss
:root {
  --header-height: 56px;
}
.ios {
  --header-height: 44px;
}
button {
  background: none;
}

ion-header {
  &.header-ios {
    ion-toolbar:last-of-type {
      --border-width: 0;
    }
  }
}
ion-button.button.button-solid {
  color: var(--fat-solidbutton-inner);
  &.ios {
    --background-hover: var(--fat-solidbutton-bg-hover);
    --background-activated: var(--fat-solidbutton-bg-hover);
  }
}
ion-toggle {
  --handle-background: var(--fat-toggle-handle-background);
  --track-background-checked: var(--fat-toggle-background-checked);
  --handle-background-checked: var(--fat-toggle-handle-background-checked);
}

ion-content {
  ion-grid {
    --ion-grid-padding: 0;
    --ion-grid-padding-xs: 0;
    --ion-grid-padding-sm: 0;
    --ion-grid-padding-md: 0;
    --ion-grid-padding-lg: 5px;
    --ion-grid-padding-xl: 5px;

    --ion-grid-width-xs: 100%;
    --ion-grid-width-sm: 540px;
    --ion-grid-width-md: 720px;
    --ion-grid-width-lg: 800px;
    --ion-grid-width-xl: 800px;
  }
  a {
    color: var(--fat-a);
  }
  ion-toolbar {
    // --background: transparent;
  }
  ion-list-header {
    color: var(--fat-ionlist-header);
  }
  .sc-ion-label-md-s>p, .sc-ion-label-ios-s>p {
    color: var(--fat-ionlabel-p);
  }
  code {
    background: var(--fat-code-background);
    padding: 2px 7px;
  }

}

ion-alert {

  [aria-labelledby*="alert-"].alert-radio-group.sc-ion-alert-ios > button {
    border-top: 1px solid #d8d8d8;
  }

  .alert-wrapper.sc-ion-alert-ios {
    background-color: var(--fat-ionalert-background);
  }
  [aria-checked=true].sc-ion-alert-md .alert-radio-label.sc-ion-alert-md, .sc-ion-alert-md .alert-radio-label.sc-ion-alert-md {
    color: var(--fat-ionalert-label);
  }
  [aria-checked=true].sc-ion-alert-ios .alert-radio-label.sc-ion-alert-ios, [aria-checked=true].sc-ion-alert-md .alert-radio-icon.sc-ion-alert-md, [aria-checked=true].sc-ion-alert-ios .alert-radio-inner.sc-ion-alert-ios {
    color: var(--fat-ionalert-active-button);
    border-color: var(--fat-ionalert-active-button);
  }
  .alert-radio-inner.sc-ion-alert-md {
    background-color: var(--fat-ionalert-active-button);
  }
  .alert-button.sc-ion-alert-md, .alert-button.sc-ion-alert-ios {
    color: var(--fat-ionalert-confirm-buttons)
  }
}

ion-popover {
  &::part(arrow) {
    --background: var(--fat-popover-bg);
  }
  &.quick-set-game {
    --width: 110px;
    ion-list {
      padding: 0;
      ion-item {
        text-align: center;
      }
    }

  }
}

ion-item {
  --transition: none;
  --border-color: var(--fat-ionlist-border);
}
ion-modal {
  ion-content > :last-child {
    padding-bottom: max(var(--safe-area-inset-bottom), 5px);
  }
}

ion-modal.character-select-settings-modal {
  --border-radius: 20px 20px 0 0;
  --max-width: 535px;
  --height: auto;
  --backdrop-opacity: 0.7;

  h2 {
    color: var(--fat-header);
    text-align: center;
    padding: 8px 0 0;
  }
  ion-item {
    &:last-of-type {
      padding-bottom: max(var(--safe-area-inset-bottom), 5px);
      --border-width: 0;
    }
    ion-icon {
      color: var(--fat-primary-tint-step-50);
    }
  }

}

ion-modal.premium-encouragement-modal {
  --border-radius: 20px 20px 0 0;
  --max-width: 535px;
  --height: auto;
  --backdrop-opacity: 0.7;
  &::part(content) {
    padding-bottom: 18px;
  }

  h2 {
    color: var(--fat-header);
    text-align: center;
    padding: 8px 0 0;
  }
  p {
    padding: 6px 15px 20px;
    margin: 0;
  }
  .chunky-button {
    // position: fixed;
    // bottom: 20px;
    // left: 10px;
    // right: 10px;
    width: 93%;
    margin-bottom: 13px;
  }
  button {
    color: var(--fat-surface-faded);
    padding-bottom: max(var(--safe-area-inset-bottom), 5px);
  }

}

ion-modal.premium-offer-modal {
  --border-radius: 20px 20px 0 0;
  --height: auto;
  .premium-offer-modal-content {
    padding: 20px 15px 10px;

    ion-button {
      font-weight: bold;
    }
    ion-checkbox {
      font-size: 17px;
      --size: 20px;
      --checkbox-background-checked: var(--fat-chunky-button-bg);
      --checkmark-color: var(--fat-chunky-button-contrast);
      --border-color: var(--fat-surface-contrast);
      --border-color-checked: var(--fat-chunky-button-bg);
    }
  }
}

ion-checkbox {
  --checkbox-background-checked: var(--fat-checkbox-checked);
  --border-color-checked: var(--fat-checkbox-checked);
  --border-color: var(--fat-primary);
}

ion-modal.select-modal > ion-select-modal > ion-content > ion-list ion-item.item-radio-checked {
  background-color: var(--fat-menu-selected-item-bg);
}

ion-fab {
  bottom: max(var(--safe-area-inset-bottom), 10px);
  &.ios {
    --background-activated: var(--fat-primary-shade-step-250);
  }
}

ion-toast {
  --max-width: 600px;
	transform: translateY(calc(-10px - var(--safe-area-inset-bottom)));
}

// PAGE HEADER AND TOOLBAR
ion-header {
  ion-toolbar {
    &:first-of-type{
      height: calc(--header-height + var(--safe-area-inset-top));
      padding-top: var(--safe-area-inset-top);
    }

    &.ios.toolbar-searchbar {
      ion-buttons {
        padding-top: 4px;
      }
    }
    &.sc-ion-searchbar-md-h, .sc-ion-searchbar-md-h {
      max-width: 400px;
      --background: var(--fat-surface);
      --color: var(--fat-surface-contrast);
    }

    &.sc-ion-searchbar-ios-h, .sc-ion-searchbar-ios-h {
      max-width: 400px;
      --background: var(--fat-surface);
      --color: var(--fat-surface-contrast);
      padding-top: 0;
      padding-bottom: 0;
      max-height: 32px;
      min-height: 0;
    }

    &.ios {
      ion-title.ios-left-align {
        padding-inline-start: 15px;
        text-align: left;
      }
    }



    .searchbar-input-container.sc-ion-searchbar-ios {
      height: 32px;
      min-height: 32px;

      .searchbar-input.sc-ion-searchbar-ios {
        padding-top: 8px;
      }
    }
    .searchbar-cancel-button.sc-ion-searchbar-ios {
      color: white;
      padding-top: 2px;
    }
    .sc-ion-searchbar-md > ion-icon {
      color: var(--fat-surface-contrast);
    }
  }
}

@media (min-width: 768px) {
  ion-modal {
    --border-radius: 7px;
    ion-toolbar {
      &:first-of-type{
        height: --header-height;
        padding-top: 0;
      }
    }
  }
}

@media (min-width: 992px) {
	ion-header {
		ion-toolbar {
			ion-title.md {
				padding: 0;
				position: fixed;
				top: 14px;
				left: 50%;
				transform: translate(-53%, 0);
			}

			&.ios:not(.toolbar-searchbar) {
				padding-top: 3px;
				height: calc(52px + var(--safe-area-inset-top));
			}

		}
	}

}

